--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,13 @@
 			</exclusions>
 			<type>jar</type>
 		</dependency>
+		<!--Mail dependency -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <!--Mail dependency -->
 		<!-- cypher code -->
 		<dependency>
 			<groupId>javax.xml.crypto</groupId>
