--- a/src/main/resources/osp.properties
+++ b/src/main/resources/osp.properties
@@ -1,3 +1,11 @@
 emailExpireTimestamp=24
 smsExpireTimestamp  =24
 fupExpireTimestamp  =4
+
+mail.smtp.host=gmail-smtp-msa.l.google.com
+mail.smtp.port=465
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.smtp.socketFactory.port=465
+mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+mail.smtp.socketFactory.fallback=false
