signup done and generate token done and tested

--- a/src/main/resources/osp.properties
+++ b/src/main/resources/osp.properties
@@ -1,6 +1,6 @@
-emailExpireTimestamp=24
-smsExpireTimestamp  =24
-fupExpireTimestamp  =4
+email.expire.time=24
+sms.expire.time=24
+fup.expire.time=4
 
 mail.smtp.host=gmail-smtp-msa.l.google.com
 mail.smtp.port=465
