--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,9 @@
 		<log4j-version>1.2.15</log4j-version>
 
 		<org.springframework-version>4.0.0.RELEASE</org.springframework-version>
-
+		<velocity.version>1.7</velocity.version>
+		<java.mail.version>1.4.7</java.mail.version>
+		<spring.convext.support.version>4.2.4.RELEASE</spring.convext.support.version>
 	</properties>
 	<dependencies>
 		<!-- Oracle Driver -->
@@ -117,12 +119,23 @@
 			<type>jar</type>
 		</dependency>
 		<!--Mail dependency -->
-        <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>1.4</version>
-        </dependency>
-        <!--Mail dependency -->
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>${velocity.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>${java.mail.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring.convext.support.version}</version>
+		</dependency>
+
+		<!--Mail dependency -->
 		<!-- cypher code -->
 		<dependency>
 			<groupId>javax.xml.crypto</groupId>
