--- a/src/main/resources/osp.properties
+++ b/src/main/resources/osp.properties
@@ -9,3 +9,11 @@ mail.smtp.starttls.enable=true
 mail.smtp.socketFactory.port=465
 mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 mail.smtp.socketFactory.fallback=false
+mail.smtp.userName=
+mail.smtp.password=
+
+mail.username=arijitdas23@gmail.com
+mail.password=
+mail.recipient=<recipient>
+
+folder.root=C:\\Users\\adas7\\Desktop\\NewsLetter\\vm
