--- a/src/main/resources/osp.properties
+++ b/src/main/resources/osp.properties
@@ -1,3 +1,12 @@
+osp.jdbc.driverClassName=com.mysql.jdbc.Driver
+osp.jdbc.url=jdbc:mysql://54.169.188.34:3306/osp_dev
+osp.batch.repos.jdbc.url=jdbc:mysql://54.169.188.34:3306/osp_batch_repos
+osp.jdbc.username=prof_usr
+osp.jdbc.password=profusr123
+
+
+
+
 email.expire.time=24
 sms.expire.time=24
 fup.expire.time=4
