config table caching query modified

--- a/src/main/resources/queryList.properties
+++ b/src/main/resources/queryList.properties
@@ -1,2 +1,2 @@
-query_osp_parameter_select=select param_id,param_code,param_name,param_value,param_desc from osp_parameter where active_status=?
+query_osp_parameter_select=select op.param_id,op.param_code,op.param_name,op.param_value,op.param_desc from OSP_PARAMETER op where op.active_status=?
 
