--- a/src/main/resources/osp.properties
+++ b/src/main/resources/osp.properties
@@ -25,5 +25,6 @@ mail.smtp.password=abcd@1234
 mail.smtp.sender.from=info@flamingostech.com
 mail.template.dir.root=C:\\Users\\Arijit_123\\Desktop\\Templates
 
+sms.url = http://sms.ismilez.in/sendsms.jsp
 sms.userid=ccgspl
 sms.password=ccgspl
