--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,7 +10,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 # Redirect log messages to a log file
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 #outputs to osp temp
-log4j.appender.file.File=C:/temp/osp.log
+log4j.appender.file.File=C:\\temp\\osp.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 log4j.appender.file.Datepattern = '.'yyyy-MM-dd
