--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,10 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/root-context.xml</param-value>
 	</context-param>
-
+	<context-param>
+		<param-name>log4j-config-location</param-name>
+		<param-value>file:${CATALINA_HOME}/conf/log4j.properties</param-value>
+	</context-param>
 
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
