email service and sms service implemented

--- a/src/main/resources/osp.properties
+++ b/src/main/resources/osp.properties
@@ -1,10 +1,8 @@
-osp.jdbc.driverClassName=com.mysql.jdbc.Driver
-osp.jdbc.url=jdbc:mysql://54.169.188.34:3306/osp_dev
-osp.batch.repos.jdbc.url=jdbc:mysql://54.169.188.34:3306/osp_batch_repos
-osp.jdbc.username=prof_usr
-osp.jdbc.password=profusr123
-
-
+#osp.jdbc.driverClassName=com.mysql.jdbc.Driver
+#osp.jdbc.url=jdbc:mysql://54.169.188.34:3306/osp_dev
+#osp.batch.repos.jdbc.url=jdbc:mysql://54.169.188.34:3306/osp_batch_repos
+#osp.jdbc.username=prof_usr
+#osp.jdbc.password=profusr123
 
 
 email.expire.time=24
@@ -23,7 +21,7 @@ mail.smtp.socketFactory.fallback=false
 mail.smtp.userName=info@flamingostech.com
 mail.smtp.password=abcd@1234
 mail.smtp.sender.from=info@flamingostech.com
-mail.template.dir.root=C:\\Users\\Arijit_123\\Desktop\\Templates
+mail.template.dir.root=/home/computer2/FlemingoWorkspace/jeet_temp/Templates
 
 sms.url = http://sms.ismilez.in/sendsms.jsp
 sms.userid=ccgspl
