mail sending connection timeout added

--- a/src/main/resources/osp.properties
+++ b/src/main/resources/osp.properties
@@ -22,6 +22,8 @@ mail.smtp.userName=info@flamingostech.com
 mail.smtp.password=abcd@1234
 mail.smtp.sender.from=info@flamingostech.com
 mail.template.dir.root=/home/computer2/FlemingoWorkspace/jeet_temp/Templates
+mail.smtp.connectiontimeout=3000
+mail.smtp.timeout=3000
 
 sms.url = http://sms.ismilez.in/sendsms.jsp
 sms.userid=ccgspl
