logger added to public methods and email , sms, FUP tested

--- a/src/main/resources/osp.properties
+++ b/src/main/resources/osp.properties
@@ -28,3 +28,6 @@ mail.smtp.timeout=3000
 sms.url = http://sms.ismilez.in/sendsms.jsp
 sms.userid=ccgspl
 sms.password=ccgspl
+
+email.verification.message=Email-id verification
+sms.verification.message=Sms verification
