--- a/src/main/resources/queryList.properties
+++ b/src/main/resources/queryList.properties
@@ -2,3 +2,5 @@ query_osp_parameter_select=select op.param_id,op.param_code,op.param_name,op.par
 query_osp_template_select=select oct.comm_template_id,oct.temp_name,oct.comm_channel_id,oct.temp_cat_id,oct.temp_sub_cat_id,oct.temp_is_editable,oct.temp_file_path from OSP_COMM_TEMPLATE oct WHERE oct.active_status=?;
 query_osp_role_select=select ROLE_ID,ROLE_NAME,DISPLAY_NAME,ACTIVE_STATUS from OSP_ROLE where ACTIVE_STATUS=?
 query_osp_location_select=select LOCATION_ID,LOCATION_NAME,LOCATION_CODE,PARENT_ID,LOCATION_TYPE from OSP_LOCATION where active_status=?
+query_osp_category_select=select CAT_ID,CAT_NAME,DISPLAY_NAME from OSP_CATEGORY where active_status=?
+query_osp_subcategory_select=select SUB_CAT_ID,CAT_ID,SUB_CAT_NAME,DISPLAY_NAME from OSP_SUB_CATEGORY where active_status=?
