--- a/src/main/resources/queryList.properties
+++ b/src/main/resources/queryList.properties
@@ -4,3 +4,4 @@ query_osp_role_select=select ROLE_ID,ROLE_NAME,DISPLAY_NAME,ACTIVE_STATUS from O
 query_osp_location_select=select LOCATION_ID,LOCATION_NAME,LOCATION_CODE,PARENT_ID,LOCATION_TYPE from OSP_LOCATION where active_status=?
 query_osp_category_select=select CAT_ID,CAT_NAME,DISPLAY_NAME from OSP_CATEGORY where active_status=?
 query_osp_subcategory_select=select SUB_CAT_ID,CAT_ID,SUB_CAT_NAME,DISPLAY_NAME from OSP_SUB_CATEGORY where active_status=?
+query_osp_prof_sub_cat_map_insert=INSERT INTO OSP_PROF_SUB_CAT_MAP(PROF_ID,SUB_CAT_ID,ACTIVE_STATUS) VALUES (?,?,?)
