--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
 		<spring.convext.support.version>4.2.4.RELEASE</spring.convext.support.version>
 		<velocity.tools.version>2.0</velocity.tools.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>typesafe</id>
+			<name>typesafe-releases</name>
+			<url>https://repo.typesafe.com/typesafe/releases</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<!-- Oracle Driver -->
 		<!-- <dependency> <groupId>com.oracle</groupId> <artifactId>ojdbc6</artifactId> 
@@ -199,6 +206,15 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
 		</dependency>
+
+		<!-- S3 dependency -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.10.50</version>
+		</dependency>
+
+
 
 	</dependencies>
 	<build>
