--- a/src/main/resources/osp.properties
+++ b/src/main/resources/osp.properties
@@ -1,8 +1,8 @@
-osp.jdbc.driverClassName=com.mysql.jdbc.Driver
-osp.jdbc.url=jdbc:mysql://54.169.188.34:3306/osp_dev
-osp.batch.repos.jdbc.url=jdbc:mysql://54.169.188.34:3306/osp_batch_repos
-osp.jdbc.username=prof_usr
-osp.jdbc.password=profusr123
+#osp.jdbc.driverClassName=com.mysql.jdbc.Driver
+#osp.jdbc.url=jdbc:mysql://54.169.188.34:3306/osp_dev
+#osp.batch.repos.jdbc.url=jdbc:mysql://54.169.188.34:3306/osp_batch_repos
+#osp.jdbc.username=prof_usr
+#osp.jdbc.password=profusr123
 
 
 email.expire.time=24
@@ -22,7 +22,6 @@ mail.smtp.userName=info@flamingostech.com
 mail.smtp.password=abcd@1234
 mail.smtp.sender.from=info@flamingostech.com
 mail.template.dir.root=/home/computer2/FlemingoWorkspace/jeet_temp/Templates
-#${catalina.base}/ospresources/templates
 mail.smtp.connectiontimeout=3000
 mail.smtp.timeout=3000
 
