osp error caching added

--- a/src/main/resources/queryList.properties
+++ b/src/main/resources/queryList.properties
@@ -12,3 +12,4 @@ query_osp_prof_publication_insert=INSERT INTO OSP_PROF_PUBLICATION (PROF_PUB_ID,
 query_osp_publication_desc_insert=INSERT INTO OSP_PUBLICATION_DESC (PUB_DESC_ID,PROF_PUB_ID,PUBS_DESC,CREATED_BY,CREATED_TS,UPDATED_BY,UPDATED_TS) VALUES (?,?,?,?,?,?,?)
 query_osp_prof_presentation_insert=INSERT INTO OSP_PROF_PRESENTATION (PROF_PRSN_ID,PROF_PRSN_NAME,PROF_ID,ACTIVE_STATUS,CREATED_BY,CREATED_TS,UPDATED_BY,UPDATED_TS) VALUES (?,?,?,?,?,?,?,?)
 query_osp_presentation_desc_insert=INSERT INTO OSP_PRESENTATION_DESC (PRSN_DESC_ID,PROF_PRSN_ID,PRSN_DESC,CREATED_BY,CREATED_TS,UPDATED_BY,UPDATED_TS) VALUES (?,?,?,?,?,?,?)
+query_osp_error_desc_select=select ERROR_NAME,ERROR_CODE,ERROR_DESC from OSP_ERROR_DESCRIPTION
